# d2x-cli

./: .gitignore  README.md  cumulusci.yml  pyproject.toml
.github/workflows/: publish.yml
orgs/: dev.json
snowfakery/: recipe.yml
src/d2x_cli/: __about__.py  __init__.py  api.py  auth.py  cli.py  github.py  logger.py  runtime.py  utils.py
src/d2x_cli/commands/: doc.py  github.py  job.py  org.py  plan.py  repo.py  scratch.py  service.py  tenant.py  test.py  token.py
src/d2x_cli/files/: d2x-job.yml
tests/: __init__.py
